BC-136 | Removed submission costs summary table